# dtcc-i-h-2025-drishtikon

./: README.md
AI/: app.py  pyproject.toml
AI/app/: app.py  graph.py
AI/app/agents/: zerodha_agent.py
AI/app/agents/zerodha_agent/: agent.py  app.py  mcp_config.json
AI/app/utils/: __init__.py  model.py  prompts.py
